added contact us form in about us

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,5 +6,12 @@
 	<div class="container">
 		
 		{%include 'subpage.html'%}
+		<hr>
+		<h3>Get In Contact</h3>
+		<form class="my-3" method="GET">
+			{{form.as_p}}
+			<button type="submit" class="btn btn-primary">Contact us</button>
+		</form>
+		<hr>
 	</div>
 {%endblock%}
