--- a/templates/Base.html
+++ b/templates/Base.html
@@ -38,7 +38,7 @@
               </li>
             {%else%}
               <li class="nav-item">
-                  <a class="nav-link" href="/profile">Profile</a>
+                  <a class="nav-link" href="/profilepage">Profile</a>
               </li>
             {%endif%}
 
