--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
 
 {%block body%}
 	<div class="container">
-		<h1>Login</h1>
+		
 	
 		<hr>
 		{% if messages %}
@@ -15,17 +15,43 @@
                 </div>
             {% endfor %}
         {% endif %}
-        <center>
-			<form class="my-3" method="POST" action="/login">
-				{% csrf_token %}
-				<label for="username">Username: </label>
-				<input class="my-1" type="text" name="username" placeholder="username" required="true"><br>
-				<label for="password">Password: </label>
-				<input class="my-1" type="password" name="password" placeholder="password" required="true"><br>
-				<button class="btn btn-primary my-2 " type="submit"> Login</button>
-			</form>
-		</center>
 
+
+        <div class="row">
+			<div class="col-sm px-5">
+				<h2>Login</h2>
+			
+					<form class="my-3" method="POST" action="/login">
+						{% csrf_token %}
+						<label class="mb-1" for="username">Username: </label>
+						<input class="form-control bg-dark text-light" type="text" name="username" placeholder="username" required="true"><br>
+						<label class="mb-1" for="password">Password: </label>
+						<input class="form-control bg-dark text-light" type="password" name="password" placeholder="password" required="true"><br>
+						<button class="btn btn-primary my-1 " type="submit"> Login</button>
+					</form>
+					<p>Don't have an account? <a href="#">Sign up</a></p>
+				
+			</div>
+			<div class="col-sm px-5">
+				<h2>Signup</h2>
+				<!-- <hr> -->
+				
+					<form class="my-3" method="POST" action="/signup">
+						{% csrf_token %}
+						<label class="mb-1" for="username">Username: </label>
+						<input class=" form-control bg-dark text-light" type="text" name="username" placeholder="username" required="true"><br>
+						<label class="mb-1" for="username">Email: </label>
+						<input class="form-control bg-dark text-light" type="email" name="email" placeholder="example@host.com" required="true"><br>
+						<label class="mb-1" for="password">Password: </label>
+						<input class="form-control bg-dark text-light" type="password" name="password" placeholder="password" required="true"><br>
+						<button class="btn btn-primary my-1 " type="submit"> Sign up</button>
+					</form>
+				
+			</div>
+		</div>
+
+
+        
 
 	</div>
 
