description page added

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {%extends 'Base.html'%}
 
-{%block title%}Homepage{%endblock%}
+{%block title%}About us{%endblock%}
 
 {%block body%}
 	<div class="container">
