--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {%extends 'Base.html'%}
 {%load my_template_tag%}
 
-{%block title%}Homepage{%endblock%}
+{%block title%}Login{%endblock%}
 
 {%block body%}
 	<div class="container">
