--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,6 @@
 {%extends 'Base.html'%}
 
-{%block title%}Homepage{%endblock%}
+{%block title%}Blog{%endblock%}
 
 {%block body%}
 <div class="container my-4">
