updates for user and formatting

--- a/templates/Base.html
+++ b/templates/Base.html
@@ -27,7 +27,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog">Blog</a>
+              <a class="nav-link" href="/blog">Write</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">About us</a>
